--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "contentlayer": "^0.3.4",
+    // "contentlayer": "^0.3.4",
     "esbuild": "0.24.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.2",
@@ -34,7 +34,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
-    "next-contentlayer": "^0.3.4",
+    // "next-contentlayer": "^0.3.4",
     "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
     "pliny": "0.2.1",
