--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "5.21.0",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@algolia/client-search": "^4.22.1",
     "autoprefixer": "^10.4.13",
     "body-scroll-lock": "^4.0.0-beta.0",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +34,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "contentlayer2": "^0.5.3",
     "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
     "pliny": "0.2.1",
