--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "image-size": "1.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
-    "next": "15.1.2",
+    "next": "13.5.6",
     "contentlayer2": "^0.5.3",
     "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
     "pliny": "0.2.1",
     "postcss": "^8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-medium-image-zoom": "^5.2.12",
     "react-snowfall": "^2.1.1",
     "reading-time": "1.5.0",
@@ -67,7 +67,7 @@
     "@eslint/js": "^9.16.0",
     "@svgr/webpack": "^8.1.0",
     "@types/mdx": "^2.0.12",
-    "@types/react": "^19.0.0",
+    "@types/react": "18.2.0",
     "@typescript-eslint/eslint-plugin": "^8.12.0",
     "@typescript-eslint/parser": "^8.12.0",
     "cross-env": "^7.0.3",
