--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@algolia/client-search": "^4.22.1",
+    "search-insights": "^2.13.0",
+    "algoliasearch": "^4.22.1",
+    "acorn": "^8.10.0",
+    "acorn-jsx": "^5.3.2",
     "autoprefixer": "^10.4.13",
     "body-scroll-lock": "^4.0.0-beta.0",
     "class-variance-authority": "^0.7.1",
@@ -34,8 +38,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "13.5.6",
-    "contentlayer2": "^0.5.3",
-    "next-contentlayer2": "^0.5.3",
+    "contentlayer2": "0.4.3",
+    "next-contentlayer2": "0.4.3",
     "next-themes": "^0.4.4",
     "pliny": "0.2.1",
     "postcss": "^8.4.49",
