--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "13.5.6",
-    "contentlayer2": "0.5.3",
-    "next-contentlayer2": "0.5.3",
+    "contentlayer2": "^0.5.3",
+    "next-contentlayer2": "^0.5.3",
     "next-themes": "^0.4.4",
     "pliny": "0.2.1",
     "postcss": "^8.4.49",
